--- a/platformio.ini
+++ b/platformio.ini
@@ -14,4 +14,6 @@ board = esp32cam
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-  tzapu/WiFiManager@^2.0.17
+	tzapu/WiFiManager@^2.0.17
+	links2004/WebSockets@^2.6.1
+	gilmaimon/ArduinoWebsockets@^0.5.4
